--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Jason Popejoy</title>
+    <title>WordSwirl: A Coding Project By Jason Popejoy</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="/img/JPMark.jpg" class="d-inline-block align-text-top"
-                    alt="Jason Popejoy Logo" width="40" height="38"> Counteri</a>
+                    alt="Jason Popejoy Logo" width="40" height="38"> WordSwirl</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="/code.html">The Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="https://github.com/jaspopejoy/Counteri.git">Git Repo</a>
+                        <a class="nav-link" target="_blank" href="https://github.com/jaspopejoy/wordswirl">Git Repo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" target="_blank" href="https://jasons-old-portfolio.netlify.app/">About</a>
@@ -55,41 +55,77 @@
     <!-- Main Section -->
     <main class="flex-shrink-0">
         <div class="container mt-5">
-
+            <div class="row row-cols-1 row-cols-lg-2">
+                <div class="col">
+                    <h1 class="display-5 fw-bold lh-1 mb-3">
+                        WORDSWIRL: A coding Project
+                    </h1>
+                    <h4 class="lead pb-3">
+                        racecar is a palindrome. A palindrome is a word, phrase, or sequence that reads the
+                        same backward as forward. Write a program that checks if the phrase entered is a palindrome.
+                    </h4>
+                </div>
+                <div class="col">
+                    <h5 class="border-1 border-bottom border-danger">Enter a word or phrase to check</h5>
+                    <form class="row gx-3 gy-2">
+                        <div class="col">
+                            <input id="userString" type="text" class="form-control" placeholder="Enter a String"
+                                aria-label="Enter a String">
+                        </div>
+                        <div class="col-12 p-2">
+                            <button type="button" id="btnSubmit" class="btn btn-danger">Check It</button>
+                        </div>
+                        <h2 class="mt-5 border-bottom border-2">Results</h2>
+                        <div class="alert alert-danger mt-5 invisible fade show" id="alert" role="alert">
+                            <h4 id="alertHeader" class="alert-heading">Well Done! You entered a palindrome!</h4>
+                            <hr>
+                            <p class="mb-0" id="msg">
+                                <!--Insert a Message Here-->
+                            </p>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </main>
 
-  <!-- Footer Section-->
-  <footer class="footer mt-auto py-3 sticky-footer">
-    <div class="container-fluid">
-        <div class="row row-cols-1 row-cols-lg-3 gy-2">
-            <div class="col order-last order-lg-first text-light">
-                <div><span class="text-muted">&copy;2023</span> Jason Popejoy | jaspopejoy@gmail.com</div>
-            </div>
-            <div class="col d-flex align-items-center justify-content-start justify-content-lg-center">
-                <img src="/img/JPLogo White.svg" alt="Jason Popejoy Logo" height="45">
-            </div>
-            <div class="col d-flex align-items-center justify-content-start justify-content-lg-end">
-                <div class="row">
-                    <div class="col social"><a href="https://www.linkedin.com/in/jason-popejoy/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
-                    </div>
-                    <div class="col social"><a href="https://twitter.com/jaspopejoy" target="_blank"><i
-                        class="fab fa-twitter fa-2x"></i></a>
-                    </div>
-                    <div class="col social"><a href="https://github.com/jaspopejoy" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+    <!-- Footer Section-->
+    <footer class="footer mt-auto py-3 sticky-footer">
+        <div class="container-fluid">
+            <div class="row row-cols-1 row-cols-lg-3 gy-2">
+                <div class="col order-last order-lg-first text-light">
+                    <div><span class="text-muted">&copy;2023</span> Jason Popejoy | jaspopejoy@gmail.com</div>
+                </div>
+                <div class="col d-flex align-items-center justify-content-start justify-content-lg-center">
+                    <img src="/img/JPLogo White.svg" alt="Jason Popejoy Logo" height="45">
+                </div>
+                <div class="col d-flex align-items-center justify-content-start justify-content-lg-end">
+                    <div class="row">
+                        <div class="col social"><a href="https://www.linkedin.com/in/jason-popejoy/" target="_blank"><i
+                                    class="fab fa-linkedin fa-2x"></i></a>
+                        </div>
+                        <div class="col social"><a href="https://twitter.com/jaspopejoy" target="_blank"><i
+                                    class="fab fa-twitter fa-2x"></i></a>
+                        </div>
+                        <div class="col social"><a href="https://github.com/jaspopejoy" target="_blank"><i
+                                    class="fab fa-github fa-2x"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</footer>
+    </footer>
 
-        <!-- Bootstrap JS -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
         </script>
 
     <script src="/js/site.js"></script>
+
+    <script>
+        document.getElementById("btnSubmit").addEventListener("click", getValues);
+    </script>
 
 </body>
 
