--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Jason Popejoy</title>
+    <title>WordSwirl: A Coding Project By Jason Popejoy</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="/img/JPMark.jpg" class="d-inline-block align-text-top"
-                    alt="Jason Popejoy Logo" width="40" height="38"> Counteri</a>
+                    alt="Jason Popejoy Logo" width="40" height="38"> WordSwirl</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="/code.html">The Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="https://github.com/jaspopejoy/Counteri.git">Git
+                        <a class="nav-link" target="_blank" href="https://github.com/jaspopejoy/wordswirl">Git
                             Repo</a>
                     </li>
                     <li class="nav-item">
@@ -58,10 +58,9 @@
         <div class="container col-xxl-8 px-4 py-5">
             <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
                 <div class="col order-last order-lg-first">
-                    <h1 class="display-5 fw-bold lh-1 mb-3"> App Name: A Coding Project</h1>
-                    <h4 class="lead">Live life one loop at a time. A javascript coding exercise using loops. Write a
-                        program that displays the numbers from 0 to 100. Display the even numbers in
-                        <strong>BOLD</strong>.
+                    <h1 class="display-5 fw-bold lh-1 mb-3"> WordSwirl: A Coding Challenge</h1>
+                    <h4 class="lead">racecar is a palindrome. A palindrome is a word, phrase, or sequence that reads the
+                        same backward as forward. Write a program that checks if the phrase entered is a palindrome.
                     </h4>
                     <ul class="fa-ul pt-2 checklist">
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap Layout</li>
@@ -89,7 +88,7 @@
                     </h5>
                 </div>
                 <div class="col d-flex align-content-center">
-                    <img src="/img/Logos/Counteri.png" class="image-fluid center-block mx-auto" alt="Counteri logo"
+                    <img src="/img/Logos/WordSwirl.png" class="image-fluid center-block mx-auto" alt="Counteri logo"
                         width="475" height="375">
                 </div>
             </div>
@@ -111,7 +110,7 @@
                                     class="fab fa-linkedin fa-2x"></i></a>
                         </div>
                         <div class="col social"><a href="https://twitter.com/jaspopejoy" target="_blank"><i
-                            class="fab fa-twitter fa-2x"></i></a>
+                                    class="fab fa-twitter fa-2x"></i></a>
                         </div>
                         <div class="col social"><a href="https://github.com/jaspopejoy" target="_blank"><i
                                     class="fab fa-github fa-2x"></i></a>
